--- a/public/patient-list.html
+++ b/public/patient-list.html
@@ -12,7 +12,7 @@
       <!-- Header -->
       <div class="header">
         <h1>Nector Hospital</h1>
-        <a href="patient-card.html" class="nav-link">
+        <a href="index.html" class="nav-link">
           <span>←</span>
           <span>Back to Patient Card</span>
         </a>
@@ -20,62 +20,73 @@
 
       <!-- Main Content -->
       <div class="main-content">
-        <!-- Search Section -->
-        <div class="search-section">
-          <h2>Search Patient</h2>
-          <form id="cardForm">
-            <div class="form-group">
-              <label for="patientId">Patient ID</label>
-              <input
-                type="text"
-                id="patientId"
-                placeholder="Enter Patient ID"
-                required
-              />
+        <!-- Left Side Content -->
+        <div class="left-content">
+          <!-- Search Section -->
+          <div class="search-section">
+            <h2>Search Patient</h2>
+            <form id="cardForm">
+              <div class="form-group">
+                <label for="patientId">Patient ID</label>
+                <input
+                  type="text"
+                  id="patientId"
+                  placeholder="Enter Patient ID"
+                  required
+                />
+              </div>
+              <button type="submit" class="btn-primary">Search Patient</button>
+              <button
+                type="button"
+                id="generateCardBtn"
+                class="btn-primary"
+                style="display: none; margin-top: 10px; background: #4caf50;"
+              >
+                Generate Card
+              </button>
+            </form>
+            <div id="message" class="message"></div>
+          </div>
+
+          <!-- Results Section - Green QR Card -->
+          <div class="results-section" id="patientDetails">
+            <div class="results-header">
+              <h3>Patient Loyalty Card</h3>
             </div>
-            <button type="submit" class="btn-primary">Search Patient</button>
-            <!-- New: Generate Card button -->
-            <button
-              type="button"
-              id="generateCardBtn"
-              class="btn-primary"
-              style="display: none; margin-top: 10px"
-            >
-              Generate Card
-            </button>
-          </form>
-          <div id="message" class="message"></div>
+
+            <div id="loyaltyCard" class="loyalty-card">
+              <h2>Nector Hospital</h2>
+              <div class="card-info">
+                <p><strong>Card No:</strong> <span id="displayCardNo">-</span></p>
+                <p><strong>Patient ID:</strong> <span id="displayId">-</span></p>
+                <p><strong>Name:</strong> <span id="displayName">-</span></p>
+                <p><strong>Phone:</strong> <span id="displayPhone">-</span></p>
+                <p><strong>Discount:</strong> <span id="displayDiscount">-</span></p>
+                <p><strong>Valid Till:</strong> <span id="displayExpiry">-</span></p>
+              </div>
+              <div id="qrcode"></div>
+            </div>
+
+            <div class="action-buttons">
+              <button id="downloadBtn" class="btn-action btn-download">📥 Download</button>
+              <button id="shareBtn" class="btn-action btn-share">📤 Share</button>
+              <button id="editBtn" class="btn-action btn-edit">✏️ Edit</button>
+            </div>
+          </div>
         </div>
 
-        <!-- Results Section -->
-        <div class="results-section" id="patientDetails">
-          <div class="results-header">
-            <h3>Patient Loyalty Card</h3>
+        <!-- Right Side - Canvas Card Preview -->
+        <div class="canvas-section" id="canvasContainer" style="display: none;">
+          <div class="canvas-header">
+            <h3>Generated Card Preview</h3>
+            <button id="closeCanvasBtn" class="close-btn">✕</button>
           </div>
-
-          <div id="loyaltyCard" class="loyalty-card">
-            <h2>Nector Hospital</h2>
-            <div class="card-info">
-              <p><strong>Card No:</strong> <span id="displayCardNo">-</span></p>
-              <p><strong>Patient ID:</strong> <span id="displayId">-</span></p>
-              <p><strong>Name:</strong> <span id="displayName">-</span></p>
-              <p><strong>Phone:</strong> <span id="displayPhone">-</span></p>
-              <p>
-                <strong>Discount:</strong> <span id="displayDiscount">-</span>
-              </p>
-              <p>
-                <strong>Valid Till:</strong> <span id="displayExpiry">-</span>
-              </p>
-            </div>
-            <div id="qrcode"></div>
-          </div>
-
-          <div class="action-buttons">
-            <button id="downloadBtn" class="btn-action btn-download">
-              📥 Download
-            </button>
-            <button id="shareBtn" class="btn-action btn-share">📤 Share</button>
-            <button id="editBtn" class="btn-action btn-edit">✏️ Edit</button>
+          <canvas id="cardCanvas" width="800" height="512"></canvas>
+          
+          <!-- Canvas Buttons - NEW -->
+          <div class="canvas-buttons">
+            <button id="downloadCanvasBtn" class="btn-canvas btn-download" style="display: none;">Download Card</button>
+            <button id="shareCanvasBtn" class="btn-canvas btn-share" style="display: none;">Share Card</button>
           </div>
         </div>
       </div>
@@ -90,11 +101,7 @@
           </div>
           <div class="form-group">
             <label for="editPhone">Phone</label>
-            <input
-              type="text"
-              id="editPhone"
-              placeholder="Enter phone number"
-            />
+            <input type="text" id="editPhone" placeholder="Enter phone number" />
           </div>
           <div class="form-group">
             <label for="editDiscount">Discount (%)</label>
@@ -113,20 +120,11 @@
           <button id="saveEditBtn" class="btn-save">💾 Save Changes</button>
         </div>
       </div>
-
-      <!-- Canvas Section with Close Button -->
-      <div id="canvasContainer" class="canvas-container" style="display: none;">
-        <div class="canvas-header">
-          <h3>Generated Card Preview</h3>
-          <button id="closeCanvasBtn" class="close-btn">✕</button>
-        </div>
-        <canvas id="cardCanvas" width="800" height="512"></canvas>
-      </div>
     </div>
 
     <!-- External Libraries -->
-    <script src="html2canvas.min.js"></script>
-    <script src="qrcode.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="patient-list.js"></script>
   </body>
 </html>
